fixed bug with background not showing up

--- a/Assets/scripts/styles.css
+++ b/Assets/scripts/styles.css
@@ -106,7 +106,7 @@
 
 
 body {
-  background: url(/Assets/Images/pikrepo.jpg);
+  background: url('https://e0.pxfuel.com/wallpapers/599/991/desktop-wallpaper-sky-universe-stars-night-clouds-moon.jpg');
   background-size: cover;
   font-family: 'Orbitron', "Audiowide", sans-serif;
   
